Fix grid banner on mobile

--- a/_core_small.scss
+++ b/_core_small.scss
@@ -60,6 +60,10 @@ ul#navbar {
         padding-bottom: 0;
     }
 }
+.col-4 {
+    width: calc(50% - 2px);
+    vertical-align: top;
+}
 .segment-a .col-2 {
     padding-bottom: 0;
 
@@ -114,6 +118,11 @@ ul#navbar {
     left: -200px;
     display: none;
 }
+
+#grid-banner .category-segment {
+    overflow-x :scroll;
+}
+
 #item-grid-wrapper {
     left: 0;
     width: auto;
